# ffc-website

./: Dockerfile  README.md  docker-compose.yaml  index.html  main.py  pyproject.toml
templates/: index.html
